--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite webpack --env.API_URL=http://localhost:5005 --config webpack.config.dev.js",
-    "build": "vite build webpack --env.API_URL=https://www.myapi.com --config webpack.config.build.js",
+    "dev": "vite",
+    "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -17,6 +17,8 @@
     "@mui/material": "^5.13.6",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "flowbite": "^1.7.0",
+    "flowbite-react": "^0.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1"
@@ -25,10 +27,13 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.3.9",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
