--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.4.10",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "react-slider": "^2.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
